  - Fixed defect #594 Don't URL-encode posterSubimage property
  - Fixed defect #598 Allow multi-digit set index and allow whitespace around it
  - Fixed defect #603 Don't add trailers to sets
  - Fixed defect #605 Downloaded trailer links are incorrect for VIDEO_TS movies
  - Enhancement  #606 Join Boxed Sets and TVShows (TV Shows are included to the sets with the same name)
  - Fixed defect #612 Encode "letters" that aren't hex digits, also document that non-Latin1 chars in the properties file must be escaped 
  - Fixed defect #622 BluRay Scanner no longer recognises moviename
  - Fixed defect #623 Changes to Sratim plugin
  - Enhancement  #630 Specify character encoding for NFO files (parameter mjb.forceNFOEncoding)

MovieJukebox 1.0.15 beta
------------------------
  - Enhancement   #72 Support for multi-episode files and folders
  - Enhancement   #90 Skins now have the ability to wrap around from the last index page to the first and vice versa 
  - Enhancement  #225 Improved sorting of movies (by IMdB rating and by year)
  - Enhancement  #250 So how do we customize the categories?
  - Enhancement  #254 Use XBMC tvshow nfo layout to override scraper info
  - Enhancement  #281 Support DVD order from TheTVDB.com
  - Enhancement  #331 FilmUp.it scraper (Italian Plug-In)
  - Enhancement  #343 Allowing prebuf to be set
  - Fixed defect #346 Errors on multiple part movies - empty details html file
  - Enhancement  #348 Enhanced BD-50 Disk RIP Scanner
  - Fixed defect #352 Fanart not being resized
  - Fixed defect #353 Some of the html files are not getting copied from the temp dir to the jukebox dir
  - Fixed defect #354 Jukebox clean-up doesn't handle files with no extension cleanly
  - Fixed defect #356 ForceFanartOverwrite setting doesn't work
  - Fixed defect #359 Allow either Series url or Season url in NFO for TheTVDB
  - Fixed defect #361 TV Shows with new episodes do not show in the YAMJ "new" html output