@@ -78,7 +78,8 @@ MovieJukebox 1.0.16 beta
   - Fixed defect #603 Don't add trailers to sets
   - Fixed defect #605 Downloaded trailer links are incorrect for VIDEO_TS movies
   - Enhancement  #606 Join Boxed Sets and TVShows (TV Shows are included to the sets with the same name)
-  - Fixed defect #612 Encode "letters" that aren't hex digits, also document that non-Latin1 chars in the properties file must be escaped 
+  - Fixed defect #612 Encode "letters" that aren't hex digits, also document that non-Latin1 chars in the properties file must be escaped
+  - Enhancement  #618 Add fanart support for allocine plugin 
   - Fixed defect #622 BluRay Scanner no longer recognises moviename
   - Fixed defect #623 Changes to Sratim plugin
   - Enhancement  #630 Specify character encoding for NFO files (parameter mjb.forceNFOEncoding)
